[gd_scene format=3 uid="uid://crdyanslu6b0r"]

[ext_resource type="Theme" uid="uid://cw6tf7fmqylkj" path="res://ui/theme/MainMenuTheme.tres" id="1_i0hv2"]
[ext_resource type="Script" uid="uid://bxjssm0y45511" path="res://ui/menu/MainMenu.gd" id="1_jlylj"]
[ext_resource type="Theme" uid="uid://ckxlwln5s1u4b" path="res://ui/theme/PauseMenuTheme.tres" id="2_guig7"]
[ext_resource type="Script" uid="uid://db85fb86bo305" path="res://ui/menu/FocusOnHover.gd" id="3_7ml3v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7ml3v"]
bg_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="PanelContainer" unique_id=1705157063]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_i0hv2")
theme_override_styles/panel = SubResource("StyleBoxFlat_7ml3v")
script = ExtResource("1_jlylj")
metadata/_custom_type_script = "uid://vl5uuupklejb"

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1136639161]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 50

[node name="Menu" type="PanelContainer" parent="VBoxContainer" unique_id=768354855]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_guig7")

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/Menu" unique_id=105045779]
layout_mode = 2
theme_override_constants/h_separation = 20
columns = 2

[node name="Buttons" type="VBoxContainer" parent="VBoxContainer/Menu/GridContainer" unique_id=1170720572]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 20

[node name="Continue" type="Button" parent="VBoxContainer/Menu/GridContainer/Buttons" unique_id=1042277735]
visible = false
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_guig7")
text = "Continue
"

[node name="FocusOnHover" type="Node" parent="VBoxContainer/Menu/GridContainer/Buttons/Continue" unique_id=1131606237]
script = ExtResource("3_7ml3v")
metadata/_custom_type_script = "uid://db85fb86bo305"

[node name="Save Game" type="Button" parent="VBoxContainer/Menu/GridContainer/Buttons" unique_id=1804277457]
visible = false
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_guig7")
text = "Save Game
"

[node name="FocusOnHover" type="Node" parent="VBoxContainer/Menu/GridContainer/Buttons/Save Game" unique_id=430817548]
script = ExtResource("3_7ml3v")
metadata/_custom_type_script = "uid://db85fb86bo305"

[node name="Load Game" type="Button" parent="VBoxContainer/Menu/GridContainer/Buttons" unique_id=1238429316]
visible = false
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_guig7")
text = "Load Game
"

[node name="FocusOnHover" type="Node" parent="VBoxContainer/Menu/GridContainer/Buttons/Load Game" unique_id=1160804702]
script = ExtResource("3_7ml3v")
metadata/_custom_type_script = "uid://db85fb86bo305"

[node name="New Game" type="Button" parent="VBoxContainer/Menu/GridContainer/Buttons" unique_id=594695380]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_guig7")
text = "New Game
"

[node name="FocusOnHover" type="Node" parent="VBoxContainer/Menu/GridContainer/Buttons/New Game" unique_id=126846450]
script = ExtResource("3_7ml3v")
metadata/_custom_type_script = "uid://db85fb86bo305"

[node name="Settings" type="Button" parent="VBoxContainer/Menu/GridContainer/Buttons" unique_id=1700096362]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_guig7")
text = "Settings
"

[node name="FocusOnHover" type="Node" parent="VBoxContainer/Menu/GridContainer/Buttons/Settings" unique_id=1521346823]
script = ExtResource("3_7ml3v")
metadata/_custom_type_script = "uid://db85fb86bo305"

[node name="Help" type="Button" parent="VBoxContainer/Menu/GridContainer/Buttons" unique_id=1028449619]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_guig7")
text = "Help
"

[node name="FocusOnHover" type="Node" parent="VBoxContainer/Menu/GridContainer/Buttons/Help" unique_id=843500869]
script = ExtResource("3_7ml3v")
metadata/_custom_type_script = "uid://db85fb86bo305"

[node name="Credits" type="Button" parent="VBoxContainer/Menu/GridContainer/Buttons" unique_id=860475787]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_guig7")
text = "Credits
"

[node name="FocusOnHover" type="Node" parent="VBoxContainer/Menu/GridContainer/Buttons/Credits" unique_id=770389123]
script = ExtResource("3_7ml3v")
metadata/_custom_type_script = "uid://db85fb86bo305"

[node name="Quit" type="Button" parent="VBoxContainer/Menu/GridContainer/Buttons" unique_id=1607872168]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_guig7")
text = "Quit"

[node name="FocusOnHover" type="Node" parent="VBoxContainer/Menu/GridContainer/Buttons/Quit" unique_id=1604931820]
script = ExtResource("3_7ml3v")
metadata/_custom_type_script = "uid://db85fb86bo305"

[connection signal="pressed" from="VBoxContainer/Menu/GridContainer/Buttons/Continue" to="." method="onContinue"]
[connection signal="pressed" from="VBoxContainer/Menu/GridContainer/Buttons/New Game" to="." method="onNewGame"]
[connection signal="pressed" from="VBoxContainer/Menu/GridContainer/Buttons/Settings" to="." method="onSettings"]
[connection signal="pressed" from="VBoxContainer/Menu/GridContainer/Buttons/Help" to="." method="onHelp"]
[connection signal="pressed" from="VBoxContainer/Menu/GridContainer/Buttons/Credits" to="." method="onCredits"]
[connection signal="pressed" from="VBoxContainer/Menu/GridContainer/Buttons/Quit" to="." method="onQuit"]
